--- a/MeMeChallenge/Base.lproj/Main.storyboard
+++ b/MeMeChallenge/Base.lproj/Main.storyboard
@@ -17,8 +17,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tomatoes" translatesAutoresizingMaskIntoConstraints="NO" id="331-yR-UAB">
-                                <rect key="frame" x="30" y="44" width="540" height="512"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="331-yR-UAB">
+                                <rect key="frame" x="300" y="300" width="0.0" height="0.0"/>
                             </imageView>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eSn-Hk-57b">
                                 <rect key="frame" x="0.0" y="556" width="600" height="44"/>
@@ -50,7 +50,4 @@
             </objects>
         </scene>
     </scenes>
-    <resources>
-        <image name="tomatoes" width="1224" height="1224"/>
-    </resources>
 </document>
