--- a/MeMeChallenge/Base.lproj/Main.storyboard
+++ b/MeMeChallenge/Base.lproj/Main.storyboard
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8121.20" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8101.16"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -38,12 +39,26 @@
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="Xye-TR-ofS"/>
                                 </items>
                             </toolbar>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gsx-HU-GLl">
+                                <rect key="frame" x="296" y="183" width="8" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OO2-ic-zxc">
+                                <rect key="frame" x="297" y="459" width="8" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="eSn-Hk-57b" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="0C8-NL-MNu"/>
+                            <constraint firstItem="OO2-ic-zxc" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="0vk-P1-bVp"/>
                             <constraint firstItem="331-yR-UAB" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="10" id="9Xx-5b-0Hw"/>
                             <constraint firstItem="331-yR-UAB" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Cil-rc-B6t"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" relation="greaterThanOrEqual" secondItem="gsx-HU-GLl" secondAttribute="bottom" constant="400" id="Svw-GF-L5t"/>
+                            <constraint firstItem="gsx-HU-GLl" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="TAW-DA-K9n"/>
+                            <constraint firstItem="eSn-Hk-57b" firstAttribute="top" relation="greaterThanOrEqual" secondItem="OO2-ic-zxc" secondAttribute="bottom" constant="80" id="U1n-dl-3fX"/>
                             <constraint firstItem="331-yR-UAB" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="ZnL-nt-fut"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" relation="greaterThanOrEqual" secondItem="331-yR-UAB" secondAttribute="bottom" constant="44" id="mvK-BL-VKE"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="eSn-Hk-57b" secondAttribute="bottom" id="qtb-rw-it5"/>
@@ -51,8 +66,10 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="bottomTextField" destination="OO2-ic-zxc" id="r7R-lI-pM1"/>
                         <outlet property="cameraButton" destination="UIE-jn-zqb" id="9QM-De-me5"/>
                         <outlet property="imageView" destination="331-yR-UAB" id="T5b-b7-iTD"/>
+                        <outlet property="topTextField" destination="gsx-HU-GLl" id="GvJ-Z2-bQ0"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
