--- a/MeMeChallenge/Base.lproj/Main.storyboard
+++ b/MeMeChallenge/Base.lproj/Main.storyboard
@@ -39,13 +39,8 @@
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="Xye-TR-ofS"/>
                                 </items>
                             </toolbar>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" adjustsFontSizeToFit="NO" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="gsx-HU-GLl">
-                                <rect key="frame" x="296" y="183" width="8" height="17"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
-                            </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" adjustsFontSizeToFit="NO" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="OO2-ic-zxc">
-                                <rect key="frame" x="296" y="383" width="8" height="17"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" adjustsFontSizeToFit="NO" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="gsx-HU-GLl">
+                                <rect key="frame" x="20" y="208" width="560" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
                             </textField>
@@ -55,22 +50,31 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OO2-ic-zxc">
+                                <rect key="frame" x="20" y="408" width="560" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="eSn-Hk-57b" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="0C8-NL-MNu"/>
-                            <constraint firstItem="E68-sx-nur" firstAttribute="top" secondItem="gsx-HU-GLl" secondAttribute="bottom" constant="100" id="0bo-Kg-Zc0"/>
+                            <constraint firstItem="E68-sx-nur" firstAttribute="top" secondItem="gsx-HU-GLl" secondAttribute="bottom" constant="75" id="0bo-Kg-Zc0"/>
                             <constraint firstItem="OO2-ic-zxc" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="0vk-P1-bVp"/>
-                            <constraint firstItem="331-yR-UAB" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="10" id="9Xx-5b-0Hw"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="OO2-ic-zxc" secondAttribute="leading" id="3J6-E8-ZHD"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="gsx-HU-GLl" secondAttribute="trailing" id="92t-4f-e9b"/>
+                            <constraint firstItem="331-yR-UAB" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="5" id="9Xx-5b-0Hw"/>
                             <constraint firstItem="331-yR-UAB" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Cil-rc-B6t"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="OO2-ic-zxc" secondAttribute="trailing" id="Si0-Ka-9JK"/>
                             <constraint firstItem="gsx-HU-GLl" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="TAW-DA-K9n"/>
                             <constraint firstItem="E68-sx-nur" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="YlF-90-qSf"/>
                             <constraint firstItem="331-yR-UAB" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="ZnL-nt-fut"/>
                             <constraint firstItem="E68-sx-nur" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="dkR-tJ-oCj"/>
-                            <constraint firstItem="E68-sx-nur" firstAttribute="top" secondItem="OO2-ic-zxc" secondAttribute="bottom" constant="-100" id="i3s-Dp-Bnz"/>
+                            <constraint firstItem="E68-sx-nur" firstAttribute="top" secondItem="OO2-ic-zxc" secondAttribute="bottom" constant="-125" id="i3s-Dp-Bnz"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" relation="greaterThanOrEqual" secondItem="331-yR-UAB" secondAttribute="bottom" constant="44" id="mvK-BL-VKE"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="eSn-Hk-57b" secondAttribute="bottom" id="qtb-rw-it5"/>
                             <constraint firstAttribute="trailingMargin" secondItem="eSn-Hk-57b" secondAttribute="trailing" constant="-20" id="wzt-mi-eep"/>
+                            <constraint firstItem="gsx-HU-GLl" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="zVd-E2-KaF"/>
                         </constraints>
                     </view>
                     <connections>
@@ -82,6 +86,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="140" y="290"/>
         </scene>
     </scenes>
 </document>
