--- a/MeMeChallenge/Base.lproj/Main.storyboard
+++ b/MeMeChallenge/Base.lproj/Main.storyboard
@@ -55,6 +55,15 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
                             </textField>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ujj-d2-wf3">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <items>
+                                    <navigationItem title="MeMe" id="OAb-oK-EDB">
+                                        <barButtonItem key="leftBarButtonItem" systemItem="action" id="xEv-VE-8ag"/>
+                                        <barButtonItem key="rightBarButtonItem" systemItem="cancel" id="F9z-ZU-elv"/>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
@@ -65,17 +74,32 @@
                             <constraint firstAttribute="trailingMargin" secondItem="gsx-HU-GLl" secondAttribute="trailing" id="92t-4f-e9b"/>
                             <constraint firstItem="331-yR-UAB" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="5" id="9Xx-5b-0Hw"/>
                             <constraint firstItem="331-yR-UAB" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Cil-rc-B6t"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="ujj-d2-wf3" secondAttribute="trailing" constant="-20" id="FJW-7p-Ezw"/>
+                            <constraint firstItem="ujj-d2-wf3" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="HAL-G4-OZx"/>
+                            <constraint firstItem="gsx-HU-GLl" firstAttribute="top" secondItem="ujj-d2-wf3" secondAttribute="bottom" constant="92" id="N0p-kj-aWa"/>
+                            <constraint firstItem="ujj-d2-wf3" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="50" id="QcN-Yc-9lq"/>
                             <constraint firstAttribute="trailingMargin" secondItem="OO2-ic-zxc" secondAttribute="trailing" id="Si0-Ka-9JK"/>
                             <constraint firstItem="gsx-HU-GLl" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="TAW-DA-K9n"/>
                             <constraint firstItem="E68-sx-nur" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="YlF-90-qSf"/>
                             <constraint firstItem="331-yR-UAB" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="ZnL-nt-fut"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="ujj-d2-wf3" secondAttribute="trailing" constant="-20" id="amw-Fx-Ut0"/>
+                            <constraint firstItem="ujj-d2-wf3" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="dAE-Dh-il9"/>
                             <constraint firstItem="E68-sx-nur" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="dkR-tJ-oCj"/>
                             <constraint firstItem="E68-sx-nur" firstAttribute="top" secondItem="OO2-ic-zxc" secondAttribute="bottom" constant="-125" id="i3s-Dp-Bnz"/>
+                            <constraint firstItem="ujj-d2-wf3" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="j2n-hv-xXc"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" relation="greaterThanOrEqual" secondItem="331-yR-UAB" secondAttribute="bottom" constant="44" id="mvK-BL-VKE"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="eSn-Hk-57b" secondAttribute="bottom" id="qtb-rw-it5"/>
                             <constraint firstAttribute="trailingMargin" secondItem="eSn-Hk-57b" secondAttribute="trailing" constant="-20" id="wzt-mi-eep"/>
                             <constraint firstItem="gsx-HU-GLl" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="zVd-E2-KaF"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="QcN-Yc-9lq"/>
+                                <exclude reference="amw-Fx-Ut0"/>
+                                <exclude reference="j2n-hv-xXc"/>
+                                <exclude reference="N0p-kj-aWa"/>
+                            </mask>
+                        </variation>
                     </view>
                     <connections>
                         <outlet property="bottomTextField" destination="OO2-ic-zxc" id="r7R-lI-pM1"/>
